Fix mobile responsive issues: prevent hero image navbar overlap, fix social icons roundness, make filter buttons equal width, reduce hero section spacing

--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -119,7 +119,11 @@
 
 .sci a {
   display: inline-flex;
-  padding: 0.5rem;
+  align-items: center;
+  justify-content: center;
+  width: 42px;
+  height: 42px;
+  padding: 0;
   border: 2px solid #3a8dd9;
   border-radius: 50%;
   font-size: 1.25rem;
@@ -239,7 +243,7 @@
 /* Responsive Design */
 @media screen and (max-width: 992px) {
   .home {
-    padding: 80px 5% 30px;
+    padding: 120px 5% 30px;
   }
 
   .container {
@@ -255,7 +259,7 @@
   .home-img {
     width: 100%;
     order: 1;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
   }
 
   .img-box {
@@ -297,7 +301,7 @@
 
 @media screen and (max-width: 480px) {
   .home {
-    padding: 60px 5% 20px;
+    padding: 100px 5% 20px;
   }
 
   .home-info h1 {
@@ -325,7 +329,8 @@
   }
 
   .sci a {
+    width: 38px;
+    height: 38px;
     font-size: 1rem;
-    padding: 0.4rem;
   }
 }
